[style] fixing z-index issue over mobile nav

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -14,3 +14,7 @@
     background-repeat: no-repeat;
     width: 299px;
 }
+
+.gt-container .gt-meta {
+  z-index: 9;
+}
